fixed spacing on home and sign up bug

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -18,11 +18,13 @@
 /* Nav bar styles */
 
 .main-nav {
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: var(--navBgColor);
   height: 6vh;
+  width: 100vw;
 }
 
 .title {
@@ -41,6 +43,9 @@
 
 .mainBg {
   background-color: var(--mainBgColor);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-list {
@@ -113,18 +118,24 @@
 
 /* Recipe div styles */
 
-.recipe-container {
-  text-align: center;
+.recipes {
+  flex: 1;
   background: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.2));
   background-color: var(--recipeBgColor);
-  min-height: 49vh;
   border-radius: 40px 40px 0 0;
+}
+
+.recipe-container {
+  text-align: center;
+
+  /* min-height: 49vh; */
+  height: 100%;
 }
 
 .recipe-div {
   width: 25vw;
   min-width: 300px;
-  height: 400px;
+  height: 100%;
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
